# cliencoins

./: Cargo.toml  README.md  net_config.yml
src/: base_types.rs  client.rs  crypto.rs  input.rs  input_management.rs  instructions.rs  main.rs  message.rs  network.rs  pub_key_converter.rs  response.rs  transfer.rs  ui.rs  utils.rs  yaml.rs
