[package]
name = "cliencoins"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rand = "0.7"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.ed25519-dalek]
version = "1.0.1"

[dependencies.yaml-rust]
git = "https://github.com/chyh1990/yaml-rust.git"

[dependencies.encoins-api]
git = "https://github.com/encoins/encoins-api"

